# PaulTalk

./: .aider.conf.yml  .aiderignore  .crush.json  .crushignore  .gitattributes  .gitignore  .pylintrc.ai  .webui_secret_key  0install_proxy.py  745B4EC7A0832D19.gpg  AGENTS.md  AST.py  AiderGuidelines.md  CMakeLists.txt  CRUSH.md  Compiler.py  Generic Programming of Reusable, High Performance Container Types using Automatic Type Hierarchy Inference and Bidirectional Antichain Typing  IO_Self_print.ll  PDLPatternPlugin.cpp  PDL_Dialect.md  PDL_Interp_Dialect.md  PaulTalkSyntax.sublime-package  Plan for the full implementation of generics  PointsToGraphs.txt  Principles of PaulTalk Design  Principles of PaulTalk Design.txt  README.md  Region Analysis and Transformation for Java Programs  Region Runtime System.md  Standard Library Design Principles  Standard Library Design Rules.txt  TODO.txt  The Zen of Mini  The Zen of PaulTalk  Things We Do Not Have  TypeSizeLowering.cpp  app.xml  array.bc  array.ll  array.mini  (+184 more)
.crush/: crush.db-shm  crush.db-wal
.github/workflows/: verify-build.yaml
Design Docs/: Catch or Catch Not, There is No Try.md  Delegation-Based Subtyping Design.md  Effect System.txt  FatPtr Diagram  Rationale For Design Decisions.txt  SIMD Ideas  Things We Do Not Have
Efficient_dynamic_look_up_strategy_for_m/: Efficient_dynamic_look_up_strategy_for_m.md  Efficient_dynamic_look_up_strategy_for_m_meta.json  extension.txt
Papers/: A Scheme for the Automatic Inference of Variable Types  Bidirectional Data-Flow Analyses, Type-Systematically.md  Bidirectional data flow analysis for type inferencing  Efficient Dynamic Look-Up Strategy for Multi-Methods.md  Empowering Union and Intersection Types with Integrated Subtyping  Towards Region-Based Memory Management for Go.md
PaulTalkSyntax/: ptalk.sublime-syntax
backup/: backupAST.py  generic.mini  lua.ll  math.mini  old.ll
backup_build/: in.mlir  out_linked.ll  out_optimized.ll
compile/: 0compile.properties
compiled_executable/: 0compile.properties
data_files/: datalayout.ll  grammar.lark  grammar.pkl  patterns.mlir  posix_utils.ll  private_proxy_key.asc  proxy_pub.gpg  region_runtime.ll  stackwalk.ll  template.xml  utils.ll  win_overcommit.cpp  win_utils.ll
debugir-master/: CMakeLists.txt  DebugIR.cpp  build.bat
lib/: array.mini  ascii.mini  bug.mini  bug2.mini  bug3.mini  bug4.mini  channel.mini  collection.mini  core.mini  core_old.mini  counterexample.mini  cuckoo.mini  dataframe.mini  files.mini  files_new.mini  generic.mini  hash_benchmark.mini  hash_perf_utils.mini  hash_table.mini  helloworld.mini  i32_max.mini  indexable.mini  integration.mini  io.mini  iteration.mini  linear_probe.mini  list.mini  map.mini  matmul.mini  mergesort.mini  open_addressing.mini  path.mini  paultalk_parser.mini  peek.mini  pong.mini  primesieve.mini  program_args.mini  quadratic_probe.mini  queue.mini  ramp_splat.mini  (+21 more)
llvm_info/: llc_options.txt  llvm_options.txt  pass_info.txt
ptalk.dist/data_files/: coro_pool.ll  datalayout.ll  grammar.lark  grammar.pkl  patterns.mlir  posix_utils.ll  printstack.cpp  printstack.ll  printstack2.ll  region_runtime.ll  stackwalk.cpp  stackwalk2.ll  template.xml  trampoline.ll  utils.ll  win_overcommit.cpp  win_utils.ll
ptalk.dist/gmpy2/: gmpy2.pyd
ptalk.dist/lark_cython/: lark_cython.pyd
ptalk.dist/lib/: array.mini  bug.mini  bug4.mini  channel.mini  collection.mini  core.mini  cuckoo.mini  files.mini  generic.mini  hash_benchmark.mini  helloworld.mini  int.mini  io.mini  iteration.mini  linear_probe.mini  linear_probe_v2.mini  list.mini  liveness.mini  map.mini  math.mini  matmul.mini  mergesort.mini  open_addressing.mini  primesieve.mini  quadratic_probe.mini  range.mini  robin_hood.mini  source.mini  stacktrace.mini  std.mini  swiss_table.mini  swiss_table_v2.mini  tests.mini  tuple_arithmetic.mini  tuple_iteration.mini  unicode.mini  unicode_example.mini
standalone/: build.bat
standalone/standalone-opt/: standalone-opt.cpp
temp_bin/: pong_out.txt
temp_build/: hash_benchmark.lib  in.mlir  out.mlir  out_linked.ll  out_lto.bc  out_optimized.ll  out_reg2mem.bc  out_reg2mem.ll  out_thin.bc
temp_build/bitcodes/: array.bc  builtins.bc  channel.bc  core.bc  cuckoo.bc  files.bc  generic.bc  hash_benchmark.bc  io.bc  iteration.bc  map.bc  math.bc  range.bc  std.bc
temp_build/hashes/: builtins.hash
temp_build/optimized/: array.optimized.bc  builtins.optimized.bc  channel.optimized.bc  core.optimized.bc  cuckoo.optimized.bc  files.optimized.bc  generic.optimized.bc  hash_benchmark.optimized.bc  io.optimized.bc  iteration.optimized.bc  map.optimized.bc  math.optimized.bc  range.optimized.bc  std.optimized.bc  utils.optimized.bc  win_utils.optimized.bc
test_build/: in.mlir  mifaiovwka.bc  out_optimized.ll  out_reg2mem.ll  tests.bc  tmp6u87c_j4.bc  tmp6zu43nem.bc  tmpns1wxdjj.bc  vbrceuwlsb.bc  vbrceuwlsb.hash  zrwcinittk.bc
test_modules/: base_case.py  compiler_negative.py  compiler_positive.py  contracts.py  performance.py
test_modules/perf_cases/: hash_get_random_hit.mini  manifest.json  (+11 more)
tests/: __init__.py  test_all.py  tests.py
tools/: check_ptalk_code.py  lint_ai_changes.py  lint_ptalk_code.py
xdsl/: pattern_rewriter.py  printer.py
(+50 files in other folders)
